--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <!-- <script type = "module" src="./node_modules/flowbite/dist/flowbite.min.js"></script> -->
     <script type = "module" src="./node_modules/flowbite/dist/flowbite.min.js"></script>
-    <script type = "module" src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script  src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
   </body>
 </html>
