--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" /> -->
-    <link href="/dist/output.css" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="" rel="stylesheet">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <title>Vite + React + TS</title>
   </head>
   <body>
@@ -14,6 +14,6 @@
     <script type="module" src="/src/index.tsx"></script>
     <!-- <script type = "module" src="./node_modules/flowbite/dist/flowbite.min.js"></script> -->
     <script type = "module" src="./node_modules/flowbite/dist/flowbite.min.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script> -->
   </body>
 </html>
