--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" /> -->
     <link href="" rel="stylesheet">
+    <!-- <link href="./public/styles/tailwind.css" rel="stylesheet"> -->
+
+    <!-- <link href="" rel="stylesheet"> -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <link href="./dist/styles/tailwind.css" rel="stylesheet"> -->
+    <!-- <link href="./output.css" rel="stylesheet"> -->
+
     <title>Vite + React + TS</title>
   </head>
   <body>
