--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="" rel="stylesheet">
     <!-- <link href="./public/styles/tailwind.css" rel="stylesheet"> -->
 
-    <!-- <link href="" rel="stylesheet"> -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="" rel="stylesheet">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <!-- <link href="./dist/styles/tailwind.css" rel="stylesheet"> -->
     <!-- <link href="./output.css" rel="stylesheet"> -->
 
@@ -18,8 +18,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
-    <!-- <script type = "module" src="./node_modules/flowbite/dist/flowbite.min.js"></script> -->
+    <script type = "module" src="./node_modules/flowbite/dist/flowbite.min.js"></script>
     <script type = "module" src="./node_modules/flowbite/dist/flowbite.min.js"></script>
     <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script> -->
+    <!-- <script src="
+https://cdn.jsdelivr.net/npm/postcss-plugins@1.13.1/index.min.js
+"></script> -->
   </body>
 </html>
